athena-dev-eks-manifests/components/07. istio/istio-pvt-ingressgateway.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"istio-ingressgateway","install.operator.istio.io/owning-resource":"unknown","install.operator.istio.io/owning-resource-namespace":"istio-system","istio":"ingressgateway","istio.io/rev":"default","operator.istio.io/component":"IngressGateways","operator.istio.io/managed":"Reconcile","operator.istio.io/version":"1.12.1","release":"istio"},"name":"istio-ingressgateway","namespace":"istio-system"},"spec":{"ports" [...]
  creationTimestamp: "2022-01-06T06:59:23Z"
  labels:
    app: istio-ingressgateway
    install.operator.istio.io/owning-resource: unknown
    install.operator.istio.io/owning-resource-namespace: istio-system
    istio: ingressgateway
    istio.io/rev: default
    operator.istio.io/component: IngressGateways
    operator.istio.io/managed: Reconcile
    operator.istio.io/version: 1.12.1
    release: istio
  name: istio-ingressgateway
  namespace: istio-system
  resourceVersion: "432708"
  uid: cafa1fdc-03fb-4f34-97db-3e1933a11a77
spec:
  clusterIP: 172.20.16.172
  clusterIPs:
  - 172.20.16.172
  externalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: status-port
    nodePort: 30049
    port: 15021
    protocol: TCP
    targetPort: 15021
  - name: http2
    nodePort: 31168
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: https
    nodePort: 31367
    port: 443
    protocol: TCP
    targetPort: 8443
  - name: tcp
    nodePort: 32430
    port: 31400
    protocol: TCP
    targetPort: 31400
  - name: tls
    nodePort: 30263
    port: 15443
    protocol: TCP
    targetPort: 15443
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
